# Telemetry

./: .gitignore  .main.cpp.swp  CLI.uxf  CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  README.md  cmake_install.cmake  main.cpp  makefile  makefile~  p  sysmon  system_monitor.uxf  tags  thoughts
api/: .ProcessAPI.cpp.swp  API.cpp  API.h  ProcessAPI.cpp  ProcessAPI.h
core/: SystemUser.cpp  SystemUser.h
core/process/: .Process.cpp.swp  .Process.h.swp  Process.cpp  Process.h  memory.h
core/sys/: SystemInfo.cpp  SystemInfo.h  SystemUser.cpp  SystemUser.h
core/util/: .str.h.swp  command.cpp  command.h  file.c  file.h  str.cpp  str.h
include/: options.h  results.h  shell.h  telemetry.h
include/Abstracts/: Jsonable.h
include/Collectors/: CPUCollector.h  Collector.h  DiskCollector.h  ProcessCollector.h  SystemCollector.h
include/cli/: CommandFactory.h  CommandLoop.h  FactoryInterface.h
include/cli/commands/: Command.h  CommandFactory.h  HelpCommand.h  ShowCommand.h  TestCommand.h
include/core/process/: Process.h
include/core/sys/: SystemInfo.h  SystemUser.h  cpu.h  disk.h  filesystem.h
include/interfaces/: Collector.h  Readable.h
include/manager/: ProcessManager.h
include/utils/: RegexMap.h  command.h  file.h  shell.h  str.h
manager/: Manager.cpp  Manager.h  ProcessManager.cpp  ProcessManager.h
src/: main.cpp  options.cpp  shell.cpp  telemetry.cpp
src/Collectors/: CPUCollector.cpp  DiskCollector.cpp  ProcessCollector.cpp  SystemCollector.cpp
src/cli/: CommandFactory.cpp  CommandLoop.cpp
src/cli/commands/: Command.cpp  CommandFactory.cpp  HelpCommand.cpp  ShowCommand.cpp  TestCommand.cpp
src/core/: filesystem.cpp
src/core/process/: Process.cpp
src/core/sys/: SystemInfo.cpp  SystemUser.cpp  cpu.cpp  disk.cpp
src/manager/: ProcessManager.cpp
src/utils/: command.cpp  file.cpp  shell.cpp  str.cpp
tests/: CMakeLists.txt  Command.cpp  Makefile  SystemInfo.cpp  SystemUser.cpp  TestCommand.cpp  TestProcess.cpp  TestProcessCollector.cpp  TestProcessManager.cpp  TestRegexMap.cpp  TestSystemInfo.cpp  TestSystemUser.cpp  TestUtils.cpp  makefile  process.cpp  tests  tests.h  utils.cpp
